<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootFrame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.viewer.DatabaseViewerActivity">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/tvDbName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/viewer_no_file_loaded"
            android:textStyle="italic" />

        <TextView
            android:id="@+id/selectATable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewer_select_a_table"
            android:textStyle="bold" />

        <Spinner
            android:id="@+id/spinnerTables"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:spinnerMode="dropdown"
            android:popupBackground="@color/spinner_background" />

        <View
            android:id="@+id/divider1"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <TextView
            android:id="@+id/dynamicSearchFields"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/viewer_search_filters"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.65"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/containerInputs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/button_primary"
            android:text="@string/viewer_search_for_matches"
            android:textColor="@color/white" />

        <View
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="1dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tvResultsInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/viewer_results"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/btnExportResults"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:background="?attr/selectableItemBackground"
                android:clickable="true"
                android:focusable="true"
                android:padding="4dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/viewer_export_results"
                    android:textColor="@color/button_export_results"
                    android:textStyle="bold" />
            </LinearLayout>
        </RelativeLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.30"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/headerContainer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:background="@color/table_header_background"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvResults"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />

            </LinearLayout>
        </HorizontalScrollView>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/loadingOverlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#80000000"
        android:visibility="gone"
        android:clickable="true"
        android:focusable="true">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:indeterminate="true" />
    </FrameLayout>

</FrameLayout>